links to pymodbus added

--- a/modbus_trial/simple_modbus_rtu_client.ipynb
+++ b/modbus_trial/simple_modbus_rtu_client.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "This simple modbus RTU client shows basic client operations such as:\n",
     "- reading from input registers\n",
-    "- read, write, read from and to holding registers"
+    "- read, write, read from and to holding registers\n",
+    "\n",
+    "Using [pymodbus synchronous client example](https://pymodbus.readthedocs.io/en/latest/source/example/synchronous_client.html)."
    ]
   },
   {
