--- a/modbus_trial/simple_modbus_rtu_server.ipynb
+++ b/modbus_trial/simple_modbus_rtu_server.ipynb
@@ -11,7 +11,9 @@
     "- ``di`` Discrete Inputs\n",
     "- ``co`` Coils\n",
     "- ``hr`` Holding Register\n",
-    "- ``ir`` Input Registers"
+    "- ``ir`` Input Registers\n",
+    "\n",
+    "Reused [pymodbus synchronous server example](https://pymodbus.readthedocs.io/en/latest/source/example/synchronous_server.html)."
    ]
   },
   {
