--- a/modbus/simple_modbus_rtu_client.ipynb
+++ b/modbus/simple_modbus_rtu_client.ipynb
@@ -15,24 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 18
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from pymodbus.client.sync import ModbusSerialClient\n",
-    "client = ModbusSerialClient(method=\"rtu\", port=\"COM11\", baudrate=19200, timeout=10, stopbits=1, bytesize=8, parity=\"E\")\n",
-    "client.connect()"
+    "from pymodbus.client.sync import ModbusSerialClient"
    ]
   },
   {
@@ -54,6 +41,35 @@
     "logging.basicConfig(format=FORMAT)\n",
     "log = logging.getLogger()\n",
     "log.setLevel(logging.DEBUG)"
+   ]
+  },
+  {
+   "source": [
+    "## ``timeout`` parameter\n",
+    "When using the USB-RS485 adapters, it is important to set ``timeout`` large enough (e.g. 10s) "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
+   "source": [
+    "client = ModbusSerialClient(method=\"rtu\", port=\"COM11\", baudrate=19200, timeout=10, stopbits=1, bytesize=8, parity=\"E\")\n",
+    "client.connect()"
    ]
   },
   {
