--- a/database/sqlalchemy_tutorial/sql_tutorial.ipynb
+++ b/database/sqlalchemy_tutorial/sql_tutorial.ipynb
@@ -365,6 +365,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "todo: Filter `<` ausprobieren, wahrscheinlich machts Sinn vorab umzurechnen (z.B: 32.8°C)"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [],
