basic database functionality established

--- a/database/use_db.ipynb
+++ b/database/use_db.ipynb
@@ -4,18 +4,82 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\envs\\flask_env\\lib\\site-packages\\flask_sqlalchemy\\__init__.py:872: FSADeprecationWarning: SQLALCHEMY_TRACK_MODIFICATIONS adds significant overhead and will be disabled by default in the future.  Set it to True or False to suppress this warning.\n",
+      "  warnings.warn(FSADeprecationWarning(\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "import datetime as dt\n",
-    "from flask import Flask\n",
-    "from flask_sqlalchemy import SQLAlchemy"
+    "from database_app import db, WalliStat, Campaign"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.create_all()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create `hourly` Campaign starting the next full hour using the `id=0`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Campaign(id:0, start=2021-10-16 22:00:00, end=None, interval=1:00:00"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = dt.datetime.now()    \n",
+    "next_hour = t.replace(second=0, microsecond=0, minute=0, hour=t.hour+1)\n",
+    "hourly = Campaign(id=0, start=next_hour, interval=dt.timedelta(seconds=3600))\n",
+    "hourly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.session.add(hourly)\n",
+    "db.session.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +277,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,13 +285,13 @@
    "source": [
     "fn = \"raw_2021-07-25.csv\"\n",
     "date_str = fn.split(\".\")[0].split(\"_\")[1]\n",
-    "df = pd.read_csv(os.path.join(\"..\", \"..\", \"logs\", fn))\n",
+    "df = pd.read_csv(os.path.join(\"..\", \"logs\", fn))\n",
     "df.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -516,65 +580,13 @@
        "[8 rows x 22 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\envs\\flask_env\\lib\\site-packages\\flask_sqlalchemy\\__init__.py:872: FSADeprecationWarning: SQLALCHEMY_TRACK_MODIFICATIONS adds significant overhead and will be disabled by default in the future.  Set it to True or False to suppress this warning.\n",
-      "  warnings.warn(FSADeprecationWarning(\n"
-     ]
-    }
-   ],
-   "source": [
-    "app = Flask(__name__)\n",
-    "app.config['SQLALCHEMY_DATABASE_URI'] = 'sqlite:///site.db'\n",
-    "db = SQLAlchemy(app)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class WalliStat(db.Model):\n",
-    "    id = db.Column(db.Integer, primary_key=True)\n",
-    "    datetime = db.Column(db.DateTime, nullable=False, unique=True)\n",
-    "    Temp = db.Column(db.Float, nullable=False, unique=False)\n",
-    "    Power = db.Column(db.Integer, nullable=False, unique=False)\n",
-    "    \n",
-    "    def __repr__(self):\n",
-    "        return f\"WalliStat({self.datetime}: {self.Temp}°C, {self.Power}W)\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db.create_all()"
    ]
   },
   {
@@ -587,15 +599,7 @@
     "    ws = WalliStat(datetime=pd.to_datetime(date_str + \" \" + row.time).to_pydatetime(), \n",
     "                   Temp=row.Temp/10., \n",
     "                   Power=row.P)\n",
-    "    db.session.add(ws)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    db.session.add(ws)\n",
     "db.session.commit()"
    ]
   },
@@ -607,35 +611,15 @@
     {
      "data": {
       "text/plain": [
-       "WalliStat(2021-07-25 00:53:32: 27.2°C, 0W)"
+       "[WalliStat(id:1, 2021-07-25 00:53:32: 27.2°C, 0W),\n",
+       " WalliStat(id:2, 2021-07-25 00:53:37: 27.2°C, 0W),\n",
+       " WalliStat(id:3, 2021-07-25 00:53:43: 27.2°C, 0W),\n",
+       " WalliStat(id:4, 2021-07-25 00:53:48: 27.2°C, 0W),\n",
+       " WalliStat(id:5, 2021-07-25 00:53:53: 27.2°C, 0W),\n",
+       " WalliStat(id:6, 2021-07-25 00:53:58: 27.2°C, 0W)]"
       ]
      },
      "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "WalliStat.query.first()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[WalliStat(2021-07-25 00:53:32: 27.2°C, 0W),\n",
-       " WalliStat(2021-07-25 00:53:37: 27.2°C, 0W),\n",
-       " WalliStat(2021-07-25 00:53:43: 27.2°C, 0W),\n",
-       " WalliStat(2021-07-25 00:53:48: 27.2°C, 0W),\n",
-       " WalliStat(2021-07-25 00:53:53: 27.2°C, 0W),\n",
-       " WalliStat(2021-07-25 00:53:58: 27.2°C, 0W)]"
-      ]
-     },
-     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,52 +630,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "campaign1 = Campaign(start=dt.datetime.now(), end=dt.datetime.now()+dt.timedelta(days=1), interval=dt.timedelta(seconds=1))\n",
+    "db.session.add(campaign1)\n",
+    "db.session.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<SQLAlchemy engine=sqlite:///c:\\Users\\holge\\Desktop\\github\\raspi_walli\\database\\sqlalchemy_tutorial\\site.db>"
+       "[Campaign(id:0, start=2021-10-16 22:00:00, end=None, interval=1:00:00,\n",
+       " Campaign(id:1, start=2021-10-16 21:16:10.082657, end=2021-10-17 21:16:10.082657, interval=0:00:01]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "db"
+    "Campaign.query.all()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[WalliStat(2021-07-25 00:53:32: 27.2°C, 0W),\n",
-       " WalliStat(2021-07-25 00:53:37: 27.2°C, 0W),\n",
-       " WalliStat(2021-07-25 00:53:43: 27.2°C, 0W),\n",
-       " WalliStat(2021-07-25 00:53:48: 27.2°C, 0W),\n",
-       " WalliStat(2021-07-25 00:53:53: 27.2°C, 0W),\n",
-       " WalliStat(2021-07-25 00:53:58: 27.2°C, 0W)]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "WalliStat.query.all()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
