--- a/database/use_db.ipynb
+++ b/database/use_db.ipynb
@@ -45,7 +45,7 @@
     {
      "data": {
       "text/plain": [
-       "Campaign(id:0, start=2021-10-16 22:00:00, end=None, interval=1:00:00"
+       "Campaign(id:0, 'hourly' is active:None, start:2021-10-17 09:00:00, end:None, interval:1:00:00)"
       ]
      },
      "execution_count": 3,
@@ -56,7 +56,7 @@
    "source": [
     "t = dt.datetime.now()    \n",
     "next_hour = t.replace(second=0, microsecond=0, minute=0, hour=t.hour+1)\n",
-    "hourly = Campaign(id=0, start=next_hour, interval=dt.timedelta(seconds=3600))\n",
+    "hourly = Campaign(id=0, title=\"hourly\", start=next_hour, interval=dt.timedelta(seconds=3600))\n",
     "hourly"
    ]
   },
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
        " WalliStat(id:6, 2021-07-25 00:53:58: 27.2°C, 0W)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +641,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "campaign1 = Campaign(start=dt.datetime.now(), end=dt.datetime.now()+dt.timedelta(days=1), interval=dt.timedelta(seconds=1))\n",
+    "campaign1 = Campaign(title=\"High frequency polling for error checking.\", start=dt.datetime.now(), end=dt.datetime.now()+dt.timedelta(days=1), interval=dt.timedelta(seconds=1))\n",
     "db.session.add(campaign1)\n",
     "db.session.commit()"
    ]
@@ -654,8 +654,8 @@
     {
      "data": {
       "text/plain": [
-       "[Campaign(id:0, start=2021-10-16 22:00:00, end=None, interval=1:00:00,\n",
-       " Campaign(id:1, start=2021-10-16 21:16:10.082657, end=2021-10-17 21:16:10.082657, interval=0:00:01]"
+       "[Campaign(id:0, 'hourly' is active:True, start:2021-10-17 09:00:00, end:None, interval:1:00:00),\n",
+       " Campaign(id:1, 'High frequency polling for error checking.' is active:True, start:2021-10-17 08:47:24.809682, end:2021-10-18 08:47:24.809682, interval:0:00:01)]"
       ]
      },
      "execution_count": 10,
@@ -664,7 +664,36 @@
     }
    ],
    "source": [
-    "Campaign.query.all()"
+    "cmps = Campaign.query.all()\n",
+    "cmps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x1f0e9471cd0>,\n",
+       " 'id': 1,\n",
+       " 'is_active': True,\n",
+       " 'end': datetime.datetime(2021, 10, 18, 8, 47, 24, 809682),\n",
+       " 'measure_walli': True,\n",
+       " 'start': datetime.datetime(2021, 10, 17, 8, 47, 24, 809682),\n",
+       " 'title': 'High frequency polling for error checking.',\n",
+       " 'interval': datetime.timedelta(seconds=1),\n",
+       " 'measure_light': True}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vars(campaign1)"
    ]
   },
   {
@@ -676,26 +705,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.drop_all()"
+    "#db.drop_all()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
