--- a/database/write_db.ipynb
+++ b/database/write_db.ipynb
@@ -45,7 +45,7 @@
     {
      "data": {
       "text/plain": [
-       "Campaign(id:0, 'hourly' is active:None, start:2021-10-17 09:00:00, end:None, interval:1:00:00)"
+       "Campaign(id:0, 'hourly' is active:None, start:2021-10-17 10:00:00, end:None, interval:1:00:00)"
       ]
      },
      "execution_count": 3,
@@ -593,33 +593,54 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hourly.id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "for index, row in df.head(6).iterrows():\n",
     "    ws = WalliStat(datetime=pd.to_datetime(date_str + \" \" + row.time).to_pydatetime(), \n",
     "                   Temp=row.Temp/10., \n",
-    "                   Power=row.P)\n",
+    "                   Power=row.P,\n",
+    "                   campaign_id=hourly.id)\n",
     "    db.session.add(ws)\n",
     "db.session.commit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[WalliStat(id:1, 2021-07-25 00:53:32: 27.2°C, 0W),\n",
-       " WalliStat(id:2, 2021-07-25 00:53:37: 27.2°C, 0W),\n",
-       " WalliStat(id:3, 2021-07-25 00:53:43: 27.2°C, 0W),\n",
-       " WalliStat(id:4, 2021-07-25 00:53:48: 27.2°C, 0W),\n",
-       " WalliStat(id:5, 2021-07-25 00:53:53: 27.2°C, 0W),\n",
-       " WalliStat(id:6, 2021-07-25 00:53:58: 27.2°C, 0W)]"
+       "[WalliStat(id:1-->campaign.id:0, 2021-07-25 00:53:32: 27.2°C, 0W),\n",
+       " WalliStat(id:2-->campaign.id:0, 2021-07-25 00:53:37: 27.2°C, 0W),\n",
+       " WalliStat(id:3-->campaign.id:0, 2021-07-25 00:53:43: 27.2°C, 0W),\n",
+       " WalliStat(id:4-->campaign.id:0, 2021-07-25 00:53:48: 27.2°C, 0W),\n",
+       " WalliStat(id:5-->campaign.id:0, 2021-07-25 00:53:53: 27.2°C, 0W),\n",
+       " WalliStat(id:6-->campaign.id:0, 2021-07-25 00:53:58: 27.2°C, 0W)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,17 +669,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Campaign(id:0, 'hourly' is active:True, start:2021-10-17 09:00:00, end:None, interval:1:00:00),\n",
-       " Campaign(id:1, 'High frequency polling for error checking.' is active:True, start:2021-10-17 08:47:24.809682, end:2021-10-18 08:47:24.809682, interval:0:00:01)]"
+       "[Campaign(id:0, 'hourly' is active:True, start:2021-10-17 10:00:00, end:None, interval:1:00:00),\n",
+       " Campaign(id:1, 'High frequency polling for error checking.' is active:True, start:2021-10-17 09:26:10.057643, end:2021-10-18 09:26:10.057643, interval:0:00:01)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,24 +691,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x1f0e9471cd0>,\n",
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x1bfe24a0910>,\n",
+       " 'title': 'High frequency polling for error checking.',\n",
+       " 'start': datetime.datetime(2021, 10, 17, 9, 26, 10, 57643),\n",
+       " 'end': datetime.datetime(2021, 10, 18, 9, 26, 10, 57643),\n",
+       " 'measure_walli': True,\n",
        " 'id': 1,\n",
        " 'is_active': True,\n",
-       " 'end': datetime.datetime(2021, 10, 18, 8, 47, 24, 809682),\n",
-       " 'measure_walli': True,\n",
-       " 'start': datetime.datetime(2021, 10, 17, 8, 47, 24, 809682),\n",
-       " 'title': 'High frequency polling for error checking.',\n",
        " 'interval': datetime.timedelta(seconds=1),\n",
        " 'measure_light': True}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,10 +719,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[WalliStat(id:1-->campaign.id:0, 2021-07-25 00:53:32: 27.2°C, 0W),\n",
+       " WalliStat(id:2-->campaign.id:0, 2021-07-25 00:53:37: 27.2°C, 0W),\n",
+       " WalliStat(id:3-->campaign.id:0, 2021-07-25 00:53:43: 27.2°C, 0W),\n",
+       " WalliStat(id:4-->campaign.id:0, 2021-07-25 00:53:48: 27.2°C, 0W),\n",
+       " WalliStat(id:5-->campaign.id:0, 2021-07-25 00:53:53: 27.2°C, 0W),\n",
+       " WalliStat(id:6-->campaign.id:0, 2021-07-25 00:53:58: 27.2°C, 0W)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hourly.walli_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Campaign(id:0, 'hourly' is active:True, start:2021-10-17 10:00:00, end:None, interval:1:00:00)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "WalliStat.query.first().campaign"
+   ]
   },
   {
    "cell_type": "code",
