db models simplified

--- a/database/database_tutorial/write_db.ipynb
+++ b/database/database_tutorial/write_db.ipynb
@@ -53,7 +53,7 @@
     {
      "data": {
       "text/plain": [
-       "Campaign(id:0, 'hourly' is active:None, start:2021-10-17 11:00:00, end:None, interval:1:00:00)"
+       "Campaign(id:0, 'hourly' is active:None, start:2021-10-17 22:00:00, end:None, interval:1:00:00)"
       ]
      },
      "execution_count": 3,
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "[7 rows x 23 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
        " WalliStat(id:6-->campaign.id:0, 2021-07-25 01:02:30: 27.5°C, 1641W)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,17 +432,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Campaign(id:0, 'hourly' is active:True, start:2021-10-17 11:00:00, end:None, interval:1:00:00),\n",
-       " Campaign(id:1, 'High frequency polling for error checking.' is active:True, start:2021-10-17 10:08:04.777224, end:2021-10-18 10:08:04.777224, interval:0:00:01)]"
+       "[Campaign(id:0, 'hourly' is active:True, start:2021-10-17 22:00:00, end:None, interval:1:00:00),\n",
+       " Campaign(id:1, 'High frequency polling for error checking.' is active:True, start:2021-10-17 21:11:22.790858, end:2021-10-18 21:11:22.790858, interval:0:00:01)]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,24 +453,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x21b46c1f4c0>,\n",
-       " 'title': 'High frequency polling for error checking.',\n",
-       " 'start': datetime.datetime(2021, 10, 17, 10, 8, 4, 777224),\n",
-       " 'end': datetime.datetime(2021, 10, 18, 10, 8, 4, 777224),\n",
-       " 'measure_walli': True,\n",
-       " 'is_active': True,\n",
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x1af1779ae20>,\n",
        " 'id': 1,\n",
+       " 'is_active': True,\n",
+       " 'end': datetime.datetime(2021, 10, 18, 21, 11, 22, 790858),\n",
        " 'interval': datetime.timedelta(seconds=1),\n",
-       " 'measure_light': True}"
+       " 'measure_light': True,\n",
+       " 'title': 'High frequency polling for error checking.',\n",
+       " 'start': datetime.datetime(2021, 10, 17, 21, 11, 22, 790858),\n",
+       " 'measure_walli': True}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
        " WalliStat(id:9-->campaign.id:1, 2021-07-25 10:23:41: 32.8°C, 0W)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
        " WalliStat(id:9-->campaign.id:1, 2021-07-25 10:23:41: 32.8°C, 0W)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
