campaign rendering implemented

--- a/database/database_tutorial/read_db.ipynb
+++ b/database/database_tutorial/read_db.ipynb
@@ -134,6 +134,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Campaign(id:0, 'hourly' is active:True, start:2021-10-17 22:00:00, end:None, interval:1:00:00),\n",
+       " Campaign(id:1, 'High frequency polling for error checking.' is active:True, start:2021-10-17 21:11:22.790858, end:2021-10-18 21:11:22.790858, interval:0:00:01)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cpns = Campaign.query.all()\n",
+    "cpns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Campaign(id:1, 'High frequency polling for error checking.' is active:True, start:2021-10-17 21:11:22.790858, end:2021-10-18 21:11:22.790858, interval:0:00:01)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cpn = cpns[1]\n",
+    "cpn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2021, 10, 17, 21, 11, 22, 790858)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cpn.start"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
