database filter prepared

--- a/flask/a.ipynb
+++ b/flask/a.ipynb
@@ -4,35 +4,36 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\envs\\flask_env\\lib\\site-packages\\flask_sqlalchemy\\__init__.py:872: FSADeprecationWarning: SQLALCHEMY_TRACK_MODIFICATIONS adds significant overhead and will be disabled by default in the future.  Set it to True or False to suppress this warning.\n",
-      "  warnings.warn(FSADeprecationWarning(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from app import commit_lux_to_db"
+    "import logging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logging.basicConfig(level=logging.DEBUG, format='%(asctime)s | %(levelname)s %(name)s %(message)s\"')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-12-04 13:06:43,512 | WARNING root \"\n"
+     ]
+    }
+   ],
    "source": [
-    "commit_lux_to_db(lux=200, campaign_id=42)"
+    "logging.warning(\"\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
