func get_next_capture implemented

--- a/flask/script_access_database.ipynb
+++ b/flask/script_access_database.ipynb
@@ -60,21 +60,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Campaign(id:0, 'hourly' is active:True, start:2021-10-17 22:00:00, end:2050-01-01 00:00:00, interval:1:00:00),\n",
-       " Campaign(id:1, 'High frequency polling for error checking.' is active:True, start:2021-10-17 21:12:00, end:2021-10-18 21:11:00, interval:1:00:00),\n",
-       " Campaign(id:3, 'super campaign' is active:False, start:2021-10-25 20:51:00, end:2024-10-25 20:51:00, interval:1:00:00),\n",
-       " Campaign(id:4, 'special 42' is active:True, start:2021-11-06 23:47:00, end:2021-11-20 23:47:00, interval:1:00:00),\n",
-       " Campaign(id:5, 'Andies\n",
-       " ' is active:True, start:2021-11-09 16:29:00, end:2021-11-07 16:29:00, interval:0:00:02)]"
+       "[Campaign(id:0, 'hourly' is active:True, start:2021-12-05 13:00:00, end:2099-01-01 00:00:00, interval:1:00:00),\n",
+       " Campaign(id:1, 'understand the light' is active:True, start:2021-12-05 12:54:00, end:2021-12-12 12:54:00, interval:0:00:30)]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,20 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Campaign(id:0, 'hourly' is active:True, start:2021-10-17 22:00:00, end:2050-01-01 00:00:00, interval:1:00:00),\n",
-       " Campaign(id:1, 'High frequency polling for error checking.' is active:True, start:2021-10-17 21:12:00, end:2021-10-18 21:11:00, interval:1:00:00),\n",
-       " Campaign(id:4, 'special 42' is active:True, start:2021-11-06 23:47:00, end:2021-11-20 23:47:00, interval:1:00:00),\n",
-       " Campaign(id:5, 'Andies\n",
-       " ' is active:True, start:2021-11-09 16:29:00, end:2021-11-07 16:29:00, interval:0:00:02)]"
+       "[Campaign(id:0, 'hourly' is active:True, start:2021-12-05 13:00:00, end:2099-01-01 00:00:00, interval:1:00:00),\n",
+       " Campaign(id:1, 'understand the light' is active:True, start:2021-12-05 12:54:00, end:2021-12-12 12:54:00, interval:0:00:30)]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,38 +102,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2021, 11, 1, 0, 0)"
+       "[Campaign(id:0, 'hourly' is active:True, start:2021-12-05 13:00:00, end:2099-01-01 00:00:00, interval:1:00:00),\n",
+       " Campaign(id:1, 'understand the light' is active:True, start:2021-12-05 12:54:00, end:2021-12-12 12:54:00, interval:0:00:30)]"
       ]
      },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cmp = dt.datetime(2021, 11, 1)\n",
-    "cmp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Campaign(id:0, 'hourly' is active:True, start:2021-10-17 22:00:00, end:2050-01-01 00:00:00, interval:1:00:00),\n",
-       " Campaign(id:6, 'understand the light sensor' is active:True, start:2021-12-05 11:31:00, end:2021-12-12 11:31:00, interval:0:00:30)]"
-      ]
-     },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,6 +121,146 @@
     "now = dt.datetime.now()\n",
     "cmps = Campaign.query.filter(Campaign.is_active==True).filter(Campaign.end > now).all()\n",
     "cmps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Campaign(id:0, 'hourly' is active:True, start:2021-12-05 13:00:00, end:2099-01-01 00:00:00, interval:1:00:00),\n",
+       " Campaign(id:1, 'understand the light' is active:True, start:2021-12-05 12:54:00, end:2021-12-12 12:54:00, interval:0:00:30)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cmps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_next_capture(cmps):\n",
+    "    \"\"\"\n",
+    "    Returns <dict> of for the next capture, with two items:\n",
+    "        \"sleeptime\": time <float> in seconds to sleep until this capture\n",
+    "        \"campain\": campaign <Campaign> of the next captur\n",
+    "\n",
+    "    Args:\n",
+    "        cmps <list>: List of campaigns <Campaign>\n",
+    "    \"\"\"\n",
+    "    pending = {}   # pending captures with <timedelta> keys and <int> index values\n",
+    "    now = dt.datetime.now()\n",
+    "    for idx, cmp in enumerate(cmps):\n",
+    "        # Overdue detection for immidiate capture\n",
+    "        overdue = False\n",
+    "        if now > cmp.start:\n",
+    "            if cmp.previous is None:\n",
+    "                overdue = True\n",
+    "            else:\n",
+    "                next = cmp.previous + cmp.interval\n",
+    "                print(\"next:\", next)\n",
+    "                if now >= next:\n",
+    "                    overdue = True\n",
+    "                    \n",
+    "        if overdue:\n",
+    "            return {\"sleeptime\": 0, \"campaign\": cmp}\n",
+    "        \n",
+    "        if now <= cmp.start:  # case: start time in the future\n",
+    "            next_capture = cmp.start\n",
+    "        else:  # case: ongoing campaign\n",
+    "            next_capture = cmp.previous + cmp.interval\n",
+    "        seconds_until_capture = max((next_capture - now) / dt.timedelta(seconds=1.0), 0.0) \n",
+    "        print(\"next_capture:\", next_capture, seconds_until_capture)\n",
+    "        pending[seconds_until_capture] = cmp\n",
+    "            \n",
+    "    print(\"todo: realign seconds function\")\n",
+    "\n",
+    "    print(\"pending:\")\n",
+    "    for item in pending.items():\n",
+    "        print(\"-\", item)\n",
+    "    min_sleeptime, next_cmp = sorted(pending.items())[0]\n",
+    "    return {\"sleeptime\": min_sleeptime, \"campaign\": next_cmp}\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'sleeptime': 0,\n",
+       " 'campaign': Campaign(id:0, 'hourly' is active:True, start:2021-12-05 13:00:00, end:2099-01-01 00:00:00, interval:1:00:00)}"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_next_capture(cmps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testvector = [Campaign(title=\"T1\", is_active=True, start=dt.datetime(2021,12,6), end=dt.datetime(2099,1,1), previous=None, interval=dt.timedelta(seconds=3600)), \n",
+    "              Campaign(title=\"T2\", is_active=True, start=dt.datetime(2021,12,5), end=dt.datetime(2099,1,1), previous=dt.datetime(2021,12,5,21), interval=dt.timedelta(seconds=3600)), \n",
+    "              Campaign(title=\"T3\", is_active=True, start=dt.datetime(2021,12,8), end=dt.datetime(2099,1,1), previous=None, interval=dt.timedelta(seconds=3600)), \n",
+    "              ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "next_capture: 2021-12-06 00:00:00 9199.99196\n",
+      "next: 2021-12-05 22:00:00\n",
+      "next_capture: 2021-12-05 22:00:00 1999.99196\n",
+      "next_capture: 2021-12-08 00:00:00 181999.99196\n",
+      "todo: realign seconds function\n",
+      "pending:\n",
+      "- (9199.99196, Campaign(id:None, 'T1' is active:True, start:2021-12-06 00:00:00, end:2099-01-01 00:00:00, interval:1:00:00))\n",
+      "- (1999.99196, Campaign(id:None, 'T2' is active:True, start:2021-12-05 00:00:00, end:2099-01-01 00:00:00, interval:1:00:00))\n",
+      "- (181999.99196, Campaign(id:None, 'T3' is active:True, start:2021-12-08 00:00:00, end:2099-01-01 00:00:00, interval:1:00:00))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'sleeptime': 1999.99196,\n",
+       " 'campaign': Campaign(id:None, 'T2' is active:True, start:2021-12-05 00:00:00, end:2099-01-01 00:00:00, interval:1:00:00)}"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_next_capture(testvector)"
    ]
   },
   {
